# windsurf-mobile-automation

./: .gitignore  .pre-commit-config.yaml  Jenkinsfile  Jenkinsfile.devicefarm  Jenkinsfile.parallel  README.md  behave.ini  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  run_tests.py  setup.cfg
apps/: README.md
config/: README.md  config.py  config_manager.py
config/android/: capabilities.json
config/common/: capabilities.json
config/ios/: capabilities.json
config/test_data/: login.yaml
pages/: base_page.py  login_page.py  sample_page.py
scripts/: manage_apps.py  run_aws_devicefarm.py  run_tests.py  verify_apps.py
test_cases/: test_sample.py
tests/: base_test.py  conftest.py  test_aws_devicefarm.py  test_login.py
tests/bdd/features/: login.feature
tests/bdd/steps/: login_steps.py
tests/suites/regression/: test_regression.py
tests/suites/sanity/: test_login_sanity.py
tests/suites/smoke/: test_smoke.py
utilities/: __init__.py  appium_manager.py  aws_devicefarm.py  test_data_loader.py  test_utils.py
utils/: mcp_gestures.py
