[isort]
line_length = 88
include_trailing_comma = true
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[flake8]
max-line-length = 88
extend-ignore = E203, E266, E501, W503
max-complexity = 18
select = B,C,E,F,W,T4,B9
per-file-ignores =
    # Ignore unused imports in __init__.py
    __init__.py: F401

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
check_untyped_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = True
warn_no_return = True
warn_unreachable = True
show_error_context = True

[bandit]
targets = .
recursive = true
skips = B101,B404,B603,B311

[pydocstyle]
add_ignore = D100,D104,D107,D203,D212,D404

[tool:pytest]
testpaths = test_cases
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = 
    -v
    --strict-markers
    --html=reports/test_report.html
    --self-contained-html
    --alluredir=reports/allure-results
    --reruns 2
    --reruns-delay 2
    --cov=.
    --cov-report=html:reports/coverage
    --cov-report=xml:reports/coverage.xml
    -m "not wip"

[metadata]
name = mobile-automation-framework
version = 0.1.0
description = Modern Mobile Automation Framework with Appium and Python
author = Your Name
author_email = your.email@example.com
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Pytest
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Quality Assurance
